--- a/css/index.css
+++ b/css/index.css
@@ -16,7 +16,9 @@
 .headRow {
   padding: 10px 0;
   border-bottom: 1px solid #ddd;
-  margin-bottom: 10px; }
+  margin-bottom: 10px;
+  height: 30px;
+}
 
 /*定制layer.js插件的skin即特定的样式*/
 .templateHCJ #html, .templateHCJ #css, .templateHCJ #js {
