--- a/css/navbar.css
+++ b/css/navbar.css
@@ -35,6 +35,9 @@
 
 /* clearfix*/
 /* 闭合子元素的浮动*/
+.navBar_wrapper07 .navbar-line07 .naver_wrapper .naver_wrapper_inner .naver_inner .naver_inner_left {
+  float: left; }
+
 .navBar_wrapper06 .navbar-line06 .naver_0 .nav_erc:before, .navBar_wrapper06 .navbar-line06 .naver_0 .nav_erc:after {
   content: " ";
   display: table; }
@@ -42,7 +45,7 @@
 .navBar_wrapper06 .navbar-line06 .naver_0 .nav_erc:after {
   clear: both; }
 
-.navbar-line06 .navbar-block a.navLink, .navbar-line06 .navbar-block a.navLink.divider, .navbar-line05 .navbar-block.on a.navLink.divider,
+.navBar_wrapper07 .navbar-line07 .naver_wrapper .naver_wrapper_inner .naver_inner, .navBar_wrapper07 .navbar-line07 .naver_wrapper .naver_wrapper_inner .naver_01 .navLi a, .navbar-line06 .navbar-block a.navLink, .navbar-line06 .navbar-block a.navLink.divider, .navbar-line05 .navbar-block.on a.navLink.divider,
 .navbar-line05 .navbar-block:hover a.navLink.divider, .navbar-line05 .navbar-block.on + .navbar-block .divider,
 .navbar-line05 .navbar-block:hover + .navbar-block .divider, .navbar-line05 .navbar-block a.navLink, .navbar-line05 .navbar-block a.navLink.divider {
   position: relative; }
@@ -50,6 +53,10 @@
 .navBar_wrapper06 .navbar-line06 .naver_0 .nav_erc, .navBar_wrapper05 .naver_0 .nav_erc {
   text-align: left; }
 
+.navBar_wrapper07 .navbar-line07 .naver_wrapper .naver_wrapper_inner .naver_inner .naver_inner_left {
+  float: left; }
+
+/*frame */
 /*----------------------------------------------------- */
 /* setting scss*/
 .navBar_wrapper06 .navbar-line06 .naver_0 .nav_erc li, .navBar_wrapper05 .naver_0 .nav_erc li {
@@ -86,6 +93,9 @@
 
 /* clearfix*/
 /* 闭合子元素的浮动*/
+.navBar_wrapper07 .navbar-line07 .naver_wrapper .naver_wrapper_inner .naver_inner .naver_inner_left {
+  float: left; }
+
 .navBar_wrapper06 .navbar-line06 .naver_0 .nav_erc:before, .navBar_wrapper06 .navbar-line06 .naver_0 .nav_erc:after {
   content: " ";
   display: table; }
@@ -93,7 +103,7 @@
 .navBar_wrapper06 .navbar-line06 .naver_0 .nav_erc:after {
   clear: both; }
 
-.navbar-line06 .navbar-block a.navLink, .navbar-line06 .navbar-block a.navLink.divider, .navbar-line05 .navbar-block.on a.navLink.divider,
+.navBar_wrapper07 .navbar-line07 .naver_wrapper .naver_wrapper_inner .naver_inner, .navBar_wrapper07 .navbar-line07 .naver_wrapper .naver_wrapper_inner .naver_01 .navLi a, .navbar-line06 .navbar-block a.navLink, .navbar-line06 .navbar-block a.navLink.divider, .navbar-line05 .navbar-block.on a.navLink.divider,
 .navbar-line05 .navbar-block:hover a.navLink.divider, .navbar-line05 .navbar-block.on + .navbar-block .divider,
 .navbar-line05 .navbar-block:hover + .navbar-block .divider, .navbar-line05 .navbar-block a.navLink, .navbar-line05 .navbar-block a.navLink.divider {
   position: relative; }
@@ -101,8 +111,122 @@
 .navBar_wrapper06 .navbar-line06 .naver_0 .nav_erc, .navBar_wrapper05 .naver_0 .nav_erc {
   text-align: left; }
 
+.navBar_wrapper07 .navbar-line07 .naver_wrapper .naver_wrapper_inner .naver_inner .naver_inner_left {
+  float: left; }
+
+/*frame */
 /* input set  start  */
 /* input set  end  */
+/* navbar start07 */
+.navBar_wrapper07 {
+  background: #006acf;
+  background: -webkit-gradient(linear, left top, left bottom, from(#018336), to(#015d27));
+  background: -webkit-linear-gradient(#018336, #015d27);
+  background: -o-linear-gradient(#018336, #015d27);
+  background: linear-gradient(#018336, #015d27);
+  background: #015d27\0;
+  padding-top: 3px; }
+  .navBar_wrapper07 .navbar-line07 .navbar-block {
+    float: left;
+    position: relative;
+    min-height: 1px;
+    cursor: pointer;
+    position: relative;
+    display: block;
+    width: 16.66667%; }
+  .navBar_wrapper07 .navbar-line07 .navbar-block a.navLink {
+    display: block;
+    padding: 13px 0px;
+    text-align: center; }
+  .navBar_wrapper07 .navbar-line07 .navbar-block.on, .navBar_wrapper07 .navbar-block:hover {
+    background: #fff;
+    color: #006acf;
+    font-weight: 700;
+    -webkit-border-radius: 10px 10px 0 0;
+    border-radius: 10px 10px 0 0; }
+  .navBar_wrapper07 .navbar-line07 .naver_wrapper {
+    background-color: #fff;
+    display: none;
+    position: absolute;
+    z-index: 9999;
+    padding: 20px 0; }
+    .navBar_wrapper07 .navbar-line07 .naver_wrapper .naver_wrapper_inner {
+      position: relative;
+      white-space: nowrap; }
+      .navBar_wrapper07 .navbar-line07 .naver_wrapper .naver_wrapper_inner .naver_inner, .navBar_wrapper07 .navbar-line07 .naver_wrapper .naver_wrapper_inner .naver_01 {
+        display: inline-block;
+        vertical-align: middle; }
+      .navBar_wrapper07 .navbar-line07 .naver_wrapper .naver_wrapper_inner .naver_inner {
+        display: none;
+        width: 500px;
+        padding-right: 5px;
+        color: #666; }
+        .navBar_wrapper07 .navbar-line07 .naver_wrapper .naver_wrapper_inner .naver_inner .naver_inner_left, .navBar_wrapper07 .navbar-line07 .naver_wrapper .naver_wrapper_inner .naver_inner .naver_inner_right {
+          min-height: 1px; }
+        .navBar_wrapper07 .navbar-line07 .naver_wrapper .naver_wrapper_inner .naver_inner .naver_inner_left {
+          width: 210px;
+          text-align: left;
+          height: 125px; }
+        .navBar_wrapper07 .navbar-line07 .naver_wrapper .naver_wrapper_inner .naver_inner .naver_inner_right {
+          margin-left: 225px;
+          height: 125px; }
+        .navBar_wrapper07 .navbar-line07 .naver_wrapper .naver_wrapper_inner .naver_inner .naver_inner_left {
+          padding-left: 10px; }
+          .navBar_wrapper07 .navbar-line07 .naver_wrapper .naver_wrapper_inner .naver_inner .naver_inner_left img {
+            display: block;
+            width: 100%;
+            height: 100%; }
+        .navBar_wrapper07 .navbar-line07 .naver_wrapper .naver_wrapper_inner .naver_inner .naver_inner_right {
+          white-space: normal;
+          padding: 0 10px; }
+      .navBar_wrapper07 .navbar-line07 .naver_wrapper .naver_wrapper_inner .naver_01 {
+        -webkit-box-sizing: border-box;
+        box-sizing: border-box;
+        min-height: 130px; }
+        .navBar_wrapper07 .navbar-line07 .naver_wrapper .naver_wrapper_inner .naver_01 .navLi {
+          text-align: center;
+          padding: 8px 0;
+          color: #333; }
+          .navBar_wrapper07 .navbar-line07 .naver_wrapper .naver_wrapper_inner .naver_01 .navLi .itemChoose {
+            color: #006acf; }
+          .navBar_wrapper07 .navbar-line07 .naver_wrapper .naver_wrapper_inner .naver_01 .navLi a {
+            padding-left: 10px; }
+            .navBar_wrapper07 .navbar-line07 .naver_wrapper .naver_wrapper_inner .naver_01 .navLi a:before {
+              position: absolute;
+              left: 0px;
+              width: auto;
+              color: inherit;
+              content: ">";
+              font-size: 15px;
+              left: -10px; }
+  .navBar_wrapper07 .navbar-line07 .naver_wrapper.position_left {
+    left: 0; }
+  .navBar_wrapper07 .navbar-line07 .naver_wrapper.position_right {
+    right: 0; }
+  .navBar_wrapper07 .navbar-line07 .naver_wrapper.position_left .naver_01 {
+    border-right: 1px solid #dddcdd; }
+  .navBar_wrapper07 .navbar-line07 .naver_wrapper.position_right .naver_01 {
+    border-left: 1px solid #dddcdd; }
+  .navBar_wrapper07 .navbar-line07 .naver_wrapper .naver_pics .link-wrapper {
+    display: inline-block;
+    text-align: center;
+    width: 137px; }
+  .navBar_wrapper07 .navbar-line07 .naver_wrapper .naver_pics .link-wrapper img {
+    display: block;
+    width: 90%; }
+  .navBar_wrapper07 .navbar-line07 .naver_wrapper .naver_pics .link-wrapper p {
+    text-align: center;
+    /*color:#999;
+    font-size: 14px;*/
+    padding-top: 10px; }
+  .navBar_wrapper07 .navbar-line07 .naver_wrapper .naver_inner.naver_text {
+    width: 420px;
+    display: inline-block;
+    white-space: normal;
+    vertical-align: top;
+    padding: 7px 18px; }
+
+/* navbar07 end */
 /* navbar06 start */
 .navBar_wrapper06 {
   background: #2675d5; }
@@ -155,7 +279,7 @@
   width: 14.28571%;
   color: #fff; }
   .navbar-line06 .navbar-block .bg {
-    width: 153px;
+    width: 100%;
     height: 60px;
     bottom: 0;
     right: 0;
@@ -243,7 +367,8 @@
 
 .navbar-line05 .navbar-block.on,
 .navbar-line05 .navbar-block:hover {
-  background: url(../img/navBg.png) no-repeat;
+  background: url(../img/navBg.png) center center no-repeat;
+  background-size: cover;
   color: #fff;
   z-index: 99; }
   .navbar-line05 .navbar-block.on a.navLink.divider:before,
@@ -281,3 +406,5 @@
     top: -1px; }
 
 /* navbar05 end */
+
+/*# sourceMappingURL=maps/navbar.css.map */
