--- a/css/picText.css
+++ b/css/picText.css
@@ -11,11 +11,21 @@
 /* color end */
 /* clearfix*/
 /* 闭合子元素的浮动*/
+.picText2 .picText2-left {
+  float: left; }
+
+.picText2 {
+  position: relative; }
+
 .picText1 .newsRow .cl-pic img {
   display: block;
   width: 100%;
   height: 100%; }
 
+.picText2 .picText2-left {
+  float: left; }
+
+/*frame */
 /*----------------------------------------------------- */
 /* setting scss*/
 /*----------------------------------------------------- */
@@ -28,13 +38,47 @@
 /* color end */
 /* clearfix*/
 /* 闭合子元素的浮动*/
+.picText2 .picText2-left {
+  float: left; }
+
+.picText2 {
+  position: relative; }
+
 .picText1 .newsRow .cl-pic img {
   display: block;
   width: 100%;
   height: 100%; }
 
+.picText2 .picText2-left {
+  float: left; }
+
+/*frame */
 /* input set  start  */
 /* input set  end  */
+/*picText2 start*/
+.picText2 {
+  border: 1px solid #ddd; }
+  .picText2 .picText2-left, .picText2 .picText2-right {
+    min-height: 1px; }
+  .picText2 .picText2-left {
+    width: 400px;
+    text-align: left;
+    height: 245px; }
+  .picText2 .picText2-right {
+    margin-left: 430px;
+    height: 245px; }
+  .picText2 .picText2-right {
+    padding-right: 30px; }
+  .picText2 .picText2-title {
+    color: #006acf;
+    font-weight: bold;
+    font-size: 18.72px;
+    text-align: center;
+    padding: 20px 0 10px; }
+  .picText2 .picText2-text {
+    text-align: justify; }
+
+/*picText2 end*/
 /* picText1 start */
 .picText1 .newsRow {
   padding: 5px 0; }
