--- a/css/slider.css
+++ b/css/slider.css
@@ -9,7 +9,7 @@
 /*是否开启打印样式*/
 /* color start */
 /* color end */
-.slideBox05 .bd li .slideTitle .link {
+.slideBox07 .inner .text, .slideBox06 .bd li .slideTitle .link, .slideBox05 .bd li .slideTitle .link {
   display: block;
   *display: inline;
   /*zoom: 1;
@@ -23,6 +23,34 @@
 
 /* clearfix*/
 /* 闭合子元素的浮动*/
+.slideBox07 .gallary .row-block {
+  float: left; }
+
+.slideBox07 .gallary:before, .slideBox07 .gallary .row-block:before, .slideBox07 .gallary:after, .slideBox07 .gallary .row-block:after {
+  content: " ";
+  display: table; }
+
+.slideBox07 .gallary:after, .slideBox07 .gallary .row-block:after {
+  clear: both; }
+
+.slideBox07, .slideBox07 .gallary .row-block {
+  position: relative; }
+
+.slideBox07 .direction .directionBtn {
+  position: absolute; }
+
+.slideBox07 .inner img {
+  display: block;
+  width: 100%;
+  height: 100%; }
+
+.slideBox07 .gallary {
+  margin: 0 auto; }
+
+.slideBox07 .gallary .row-block {
+  float: left; }
+
+/*frame */
 /*----------------------------------------------------- */
 /* setting scss*/
 /*----------------------------------------------------- */
@@ -33,7 +61,7 @@
 /*是否开启打印样式*/
 /* color start */
 /* color end */
-.slideBox05 .bd li .slideTitle .link {
+.slideBox07 .inner .text, .slideBox06 .bd li .slideTitle .link, .slideBox05 .bd li .slideTitle .link {
   display: block;
   *display: inline;
   /*zoom: 1;
@@ -47,6 +75,34 @@
 
 /* clearfix*/
 /* 闭合子元素的浮动*/
+.slideBox07 .gallary .row-block {
+  float: left; }
+
+.slideBox07 .gallary:before, .slideBox07 .gallary .row-block:before, .slideBox07 .gallary:after, .slideBox07 .gallary .row-block:after {
+  content: " ";
+  display: table; }
+
+.slideBox07 .gallary:after, .slideBox07 .gallary .row-block:after {
+  clear: both; }
+
+.slideBox07, .slideBox07 .gallary .row-block {
+  position: relative; }
+
+.slideBox07 .direction .directionBtn {
+  position: absolute; }
+
+.slideBox07 .inner img {
+  display: block;
+  width: 100%;
+  height: 100%; }
+
+.slideBox07 .gallary {
+  margin: 0 auto; }
+
+.slideBox07 .gallary .row-block {
+  float: left; }
+
+/*frame */
 /* input set  start  */
 /* input set  end  */
 /*ul-line start*/
@@ -66,6 +122,129 @@
   border: 1px solid #df0000; }
 
 /*ul-line end*/
+/* slideBox07 start  */
+.slideBox07 .direction .directionBtn {
+  line-height: 125px;
+  width: 25px;
+  height: 100%;
+  top: 0;
+  bottom: 0;
+  cursor: pointer;
+  background: #f4f4f4;
+  text-align: center; }
+  .slideBox07 .direction .directionBtn.sprev {
+    left: 0; }
+  .slideBox07 .direction .directionBtn.snext {
+    right: 0; }
+
+.slideBox07 i {
+  color: gray;
+  font-size: 28.08px;
+  vertical-align: middle; }
+
+.slideBox07 .gallary {
+  width: 94%; }
+  .slideBox07 .gallary .row-block {
+    width: 20%;
+    min-height: 1px; }
+    .slideBox07 .gallary .row-block .inner {
+      padding: 0 5px; }
+
+.slideBox07 .bd {
+  overflow: hidden; }
+
+.slideBox07 .inner .gInner {
+  position: relative;
+  height: 125px;
+  overflow: hidden; }
+
+.slideBox07 .inner .text {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background: rgba(0, 0, 0, 0.8);
+  color: #fff;
+  text-align: center;
+  padding: 2px 0; }
+
+.slideBox07 .inner:hover {
+  opacity: 1; }
+  .slideBox07 .inner:hover img {
+    -webkit-transform: scale(1.01, 1.1);
+    -ms-transform: scale(1.01, 1.1);
+    transform: scale(1.01, 1.1);
+    -webkit-transition: .3s transform;
+    -o-transition: .3s transform;
+    transition: .3s transform; }
+
+/* slideBox07 end  */
+/* slideBox06 start  */
+.slideBox06 {
+  overflow: hidden;
+  position: relative;
+  text-align: right; }
+  .slideBox06 .hd {
+    text-align: right;
+    right: 0;
+    overflow: hidden;
+    position: absolute;
+    bottom: 5px;
+    z-index: 1; }
+  .slideBox06 .bd li a img {
+    width: 100%;
+    height: 245px;
+    display: block; }
+
+.slideBox06 .hd ul {
+  overflow: hidden;
+  zoom: 1;
+  display: inline-block; }
+
+.slideBox06 .hd ul li {
+  float: left;
+  margin-right: 12px;
+  width: 10px;
+  color: #fff;
+  height: 10px;
+  line-height: 10px;
+  -webkit-border-radius: 50%;
+  border-radius: 50%;
+  text-align: center;
+  background: #fff;
+  cursor: pointer;
+  font-size: 12px;
+  position: relative; }
+  .slideBox06 .hd ul li.on {
+    background: #006acf;
+    color: white; }
+
+.slideBox06 .bd {
+  position: relative;
+  width: 100%;
+  z-index: 0; }
+  .slideBox06 .bd li {
+    width: 100%;
+    display: block;
+    vertical-align: middle;
+    position: relative; }
+    .slideBox06 .bd li .slideTitle {
+      position: absolute;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background: rgba(0, 0, 0, 0.4);
+      color: #fff;
+      text-align: left;
+      padding: 10px 20px; }
+      .slideBox06 .bd li .slideTitle .link {
+        width: 70%; }
+
+.slideBox06 .bd li a {
+  width: 100%;
+  display: block; }
+
+/* slideBox06 end */
 /*slideBox05 start*/
 /* slideBox start  */
 .slideBox05 {
@@ -226,52 +405,44 @@
   overflow: hidden;
   position: relative;
   border-top: 1px solid #ddd; }
-
-.slideBox01 .hd {
-  text-align: center;
-  width: 100%;
-  overflow: hidden;
-  position: absolute;
-  bottom: 5px;
-  z-index: 1; }
-
-.slideBox01 .hd ul {
-  overflow: hidden;
-  zoom: 1;
-  display: inline-block; }
-
-.slideBox01 .hd ul li {
-  float: left;
-  margin-right: 12px;
-  width: 15px;
-  height: 15px;
-  border-radius: 50%;
-  line-height: 14px;
-  text-align: center;
-  background: #fff;
-  cursor: pointer; }
-
-.slideBox01 .hd ul li.on {
-  background: #6eb92b;
-  color: #fff; }
-
-.slideBox01 .bd {
-  position: relative;
-  width: 100%;
-  z-index: 0; }
-
-.slideBox01 .bd li {
-  width: 100%;
-  display: block;
-  vertical-align: middle; }
-
-.slideBox01 .bd li a {
-  width: 100%;
-  display: block; }
-
-.slideBox01 .bd img {
-  width: 100%;
-  display: block; }
+  .slideBox01 .hd {
+    text-align: center;
+    width: 100%;
+    overflow: hidden;
+    position: absolute;
+    bottom: 5px;
+    z-index: 1; }
+    .slideBox01 .hd ul {
+      overflow: hidden;
+      zoom: 1;
+      display: inline-block; }
+      .slideBox01 .hd ul li {
+        float: left;
+        margin-right: 12px;
+        width: 15px;
+        height: 15px;
+        border-radius: 50%;
+        line-height: 14px;
+        text-align: center;
+        background: #fff;
+        cursor: pointer; }
+        .slideBox01 .hd ul li.on {
+          background: #6eb92b;
+          color: #fff; }
+  .slideBox01 .bd {
+    position: relative;
+    width: 100%;
+    z-index: 0; }
+    .slideBox01 .bd li {
+      width: 100%;
+      display: block;
+      vertical-align: middle; }
+      .slideBox01 .bd li a {
+        width: 100%;
+        display: block; }
+    .slideBox01 .bd img {
+      width: 100%;
+      display: block; }
 
 /*slideBox01 end*/
 .publish {
@@ -462,7 +633,8 @@
 /*scrollSpyBox right 01 start*/
 .affix_p01 {
   min-height: 1px;
-  position: relative; }
+  position: relative;
+  z-index: 999; }
 
 .affix_p01.affix {
   position: fixed;
@@ -563,7 +735,8 @@
 
 .ul_tab01 .r-row .r-text .r-inner {
   padding-bottom: 20px;
-  border-bottom: 1px dashed #c2c2c2; }
+  border-bottom: 1px dashed #c2c2c2;
+  height: 150px; }
 
 .ul_tab01 .r-row .text-body .r-item {
   line-height: 25px;
