--- a/sass/mySassWare/variable.scss
+++ b/sass/mySassWare/variable.scss
@@ -7,6 +7,7 @@ $baseSize : 14px;
 $mediumSize:$smallSize*1.3;
 $bigSize:$mediumSize*1.2;
 $titleSize:$bigSize*1.2;
+$bigTitle:$smallSize*2.3;
 %smallSize{font-size:$smallSize}
 %baseSize{font-size:$baseSize;}
 %mediumSize{
@@ -204,3 +205,6 @@ $cyan:#f0f4f6;
 
 }
 
+/*frame */
+$mainLeft:400px;
+$mainP:15px;
