--- a/sass/web/slider.scss
+++ b/sass/web/slider.scss
@@ -19,6 +19,150 @@
 }
 /*ul-line end*/
 
+/* slideBox07 start  */
+.slideBox07{
+    $tth:34px;
+    $product_slide_pl:0.03;
+    $height:125px;
+    $num:5;
+    $gutter:15px;
+
+    @extend %relative;
+    .direction .directionBtn{
+        line-height:$height;
+        @extend %abs;
+        width:25px;
+        height:100%;
+        top:0;bottom:0;
+        cursor: pointer;
+        background:#f4f4f4;
+        text-align: center;
+        &.sprev{left:0;};
+        &.snext{right:0;}
+
+    }
+
+    i{
+        color:gray;
+        font-size: $bigSize*1.5;
+        vertical-align: middle;
+    }
+
+    .gallary{
+        @extend %mar-center;
+        @include rowBeta($num:$num,$outer_gutter:5px,$plusM:false,$height:false)
+        width:percentage(1-$product_slide_pl*2)}
+    .bd{overflow: hidden;}
+    .inner{
+
+        img{@extend %full;}
+        .gInner{position:relative;height:$height;overflow: hidden;}
+        .text{
+            position:absolute;
+            left:0;
+            bottom:0;
+            right:0;
+            background:rgba(0,0,0,0.8);
+            color:#fff;
+            text-align: center;
+            padding:2px 0;
+            @extend %ellipsis;
+        }
+        &:hover{
+            opacity:1;
+            img{
+                -webkit-transform: scale(1.01, 1.1);
+                -ms-transform: scale(1.01, 1.1);
+                transform: scale(1.01, 1.1);
+                -webkit-transition: .3s transform;
+                -o-transition: .3s transform;
+                transition: .3s transform;
+            }
+        }
+    }
+}
+/* slideBox07 end  */
+
+/* slideBox06 start  */
+    $size:10px;
+    $bgColor1:#fff;
+    $bgColor2:rgba(0, 0, 0,0.4);
+    $sb06height:245px;
+    .slideBox06 {
+    
+        overflow: hidden;
+        position: relative;
+        text-align: right;
+    
+        .hd {
+            text-align: right;
+            right:0;
+            overflow: hidden;
+            position: absolute;
+            bottom: 5px;
+            z-index: 1;
+        }
+        .bd li a img {
+            width: 100%;
+            height: $sb06height;
+            display: block;
+        }
+    }
+    .slideBox06 .hd ul {
+        overflow: hidden;
+        zoom: 1;
+        display: inline-block;
+    }
+    
+    .slideBox06 .hd ul li {
+        float: left;
+        margin-right: 12px;
+        width: $size;
+        color:#fff;
+        @include lheightM($size);
+        -webkit-border-radius:50%;
+        border-radius:50%;
+        text-align: center;
+        background: $bgColor1;
+        cursor: pointer;
+        font-size: $smallSize;
+        position:relative;
+    
+        &.on {
+            background: $mainColor;
+            color: white;
+        }
+    }
+    .slideBox06 .bd {
+        position: relative;
+        width: 100%;
+        z-index: 0;
+    
+        li {
+            width: 100%;
+            display: block;
+            vertical-align: middle;
+            position:relative;
+            .slideTitle{
+                position:absolute;left:0;right:0;bottom:0;
+                background:$bgColor2;
+                color:#fff;
+                text-align:left;
+                padding:10px 20px;
+                .link{width:70%;@extend %ellipsis;}
+    
+            }
+        }
+    }
+    .slideBox06 .bd li a {
+        width: 100%;
+        display: block;
+    }
+
+
+
+/* slideBox06 end */
+
 /*slideBox05 start*/
 /* slideBox start  */
     .slideBox05 {
@@ -202,16 +346,23 @@ $color_a02:#faf9f9,#df0000,rgb(255, 255, 255);
 
 /*slideBox01 start*/
 
-    .slideBox01{ width:100%; overflow:hidden; position:relative; border-top:1px solid #ddd;  }
-    .slideBox01 .hd{text-align: center; width:100%; overflow:hidden; position:absolute; bottom:5px; z-index:1; }
-    .slideBox01 .hd ul{ overflow:hidden; zoom:1; display: inline-block; }
-    .slideBox01 .hd ul li{ float:left; margin-right:12px;  width:15px; height:15px; border-radius:50%;line-height:14px; text-align:center; background:#fff; cursor:pointer; }
-    .slideBox01 .hd ul li.on{ background:#6eb92b; color:#fff; }
-    .slideBox01 .bd{ position:relative; width:100%; z-index:0;   }
-    .slideBox01 .bd li{ width:100%;display:block;vertical-align:middle; }
-    .slideBox01 .bd li a{width: 100%;display: block;}
-    .slideBox01 .bd img{width:100%; display: block;}
-
+    .slideBox01{
+        width:100%; overflow:hidden; position:relative; border-top:1px solid #ddd;
+        .hd{text-align: center; width:100%; overflow:hidden; position:absolute; bottom:5px; z-index:1;
+            ul{ overflow:hidden; zoom:1; display: inline-block;
+                li{
+                    float:left; margin-right:12px;  width:15px; height:15px; border-radius:50%;line-height:14px; text-align:center; background:#fff; cursor:pointer;
+                    &.on{ background:#6eb92b; color:#fff; }
+                }
+            }
+        }
+        .bd{ position:relative; width:100%; z-index:0;
+            li{ width:100%;display:block;vertical-align:middle;
+                a{width: 100%;display: block;}
+            }
+            img{width:100%; display: block;}
+        }
+    }
 
 /*slideBox01 end*/
 
@@ -338,6 +489,7 @@ $color_a02:#faf9f9,#df0000,rgb(255, 255, 255);
 .affix_p01{
     min-height: 1px;
     position: relative;
+    z-index: 999;
 }
 .affix_p01.affix {
     position: fixed;
@@ -396,52 +548,53 @@ $color_a02:#faf9f9,#df0000,rgb(255, 255, 255);
 /*scrollSpyBox right 01 end*/
 
 /*ul_tab01 start*/
-.ul_tab01 .r-row+.r-row{padding-top: 20px;}
+    .ul_tab01 .r-row+.r-row{padding-top: 20px;}
 
-.ul_tab01 .tagRow02 {text-align: left;}
+    .ul_tab01 .tagRow02 {text-align: left;}
 
-.ul_tab01 .tagRow02 .text02 { margin-right: 1rem; }
-.ul_tab01 .r-row .r-text {
-    padding-top: 20px;
-    padding-left: 18px;
-}
+    .ul_tab01 .tagRow02 .text02 { margin-right: 1rem; }
+    .ul_tab01 .r-row .r-text {
+        padding-top: 20px;
+        padding-left: 18px;
+    }
 
-.ul_tab01 .tagRow02 .hbtnBox .hbtn.on {
-    background-color: #54a4d5;
-    color: #fff;
-}
-.ul_tab01 .tagRow02 .hbtnBox .hbtn {
-    display: block;
-    height: 100%;
-    float: left;
-    color: #54a4d5;
-    padding: 0 15px;
-}
-.ul_tab01 .tagRow02 .more a{position: relative;padding-right: 15px;}
-.ul_tab01 .tagRow02 .more a:after{position: absolute;content: ">";right: 0;}
-.ul_tab01 .r-row .r-text .text-wrapper .text-body {
-    line-height: 30px;
-    font-size: 14px;
-    text-indent: 29px;
-    text-align: left;
-}
-.ul_tab01 .r-row .r-text .r-inner {
-    padding-bottom: 20px;
-    border-bottom: 1px dashed #c2c2c2;
-}
-.ul_tab01 .r-row .text-body .r-item {
-    line-height: 25px;
-    font-size: 13px;
-    text-indent: 12px;
-    color: #b2b2b2;
-    background: url(#{$baseImgUrl}/bluei.png) no-repeat 0 53%;
-}   
-.ul_tab01 .r-text .pic{
-    width: 220px;
-    border: 1px solid #6eb92b;
-    height: 147px;
-}
-.ul_tab01 .r-text .pic img{height: 100%;width: 100%;}
+    .ul_tab01 .tagRow02 .hbtnBox .hbtn.on {
+        background-color: #54a4d5;
+        color: #fff;
+    }
+    .ul_tab01 .tagRow02 .hbtnBox .hbtn {
+        display: block;
+        height: 100%;
+        float: left;
+        color: #54a4d5;
+        padding: 0 15px;
+    }
+    .ul_tab01 .tagRow02 .more a{position: relative;padding-right: 15px;}
+    .ul_tab01 .tagRow02 .more a:after{position: absolute;content: ">";right: 0;}
+    .ul_tab01 .r-row .r-text .text-wrapper .text-body {
+        line-height: 30px;
+        font-size: 14px;
+        text-indent: 29px;
+        text-align: left;
+    }
+    .ul_tab01 .r-row .r-text .r-inner {
+        padding-bottom: 20px;
+        border-bottom: 1px dashed #c2c2c2;
+        height: 150px;
+    }
+    .ul_tab01 .r-row .text-body .r-item {
+        line-height: 25px;
+        font-size: 13px;
+        text-indent: 12px;
+        color: #b2b2b2;
+        background: url(#{$baseImgUrl}/bluei.png) no-repeat 0 53%;
+    }
+    .ul_tab01 .r-text .pic{
+        width: 220px;
+        border: 1px solid #6eb92b;
+        height: 147px;
+    }
+    .ul_tab01 .r-text .pic img{height: 100%;width: 100%;}
 /*ul_tab01 end*/
 
 /*glideWrapper01 start*/
